--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy:production": "react-scripts build && (echo build | netlify deploy --prod)",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
