--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "BDT",
+  "name": "Basketball Decision Training - Coach Kamil Hoops",
   "icons": [
     {
       "src": "favicon.ico",
